--- a/proj/HsaTest.vcxproj.filters
+++ b/proj/HsaTest.vcxproj.filters
@@ -10,26 +10,20 @@
     <ClCompile Include="..\common\ff_log.cpp">
       <Filter>common</Filter>
     </ClCompile>
-    <ClCompile Include="..\common\ff_runtime_hsa.cpp">
-      <Filter>common</Filter>
-    </ClCompile>
-    <ClCompile Include="..\common\ff_runtime_ocl.cpp">
-      <Filter>common</Filter>
-    </ClCompile>
     <ClCompile Include="..\common\ff_timer.cpp">
       <Filter>common</Filter>
     </ClCompile>
     <ClCompile Include="..\src\main.cpp">
       <Filter>src</Filter>
     </ClCompile>
-    <ClCompile Include="..\src\hsa_info_test.cpp">
-      <Filter>src</Filter>
-    </ClCompile>
     <ClCompile Include="..\src\hsa_queue_test.cpp">
-      <Filter>src</Filter>
+      <Filter>src\hsa</Filter>
     </ClCompile>
     <ClCompile Include="..\src\hsa_mem_test.cpp">
-      <Filter>src</Filter>
+      <Filter>src\hsa</Filter>
+    </ClCompile>
+    <ClCompile Include="..\src\hsa_info_test.cpp">
+      <Filter>src\hsa</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
@@ -42,22 +36,10 @@
     <ClInclude Include="..\common\ff_file_opt.h">
       <Filter>common</Filter>
     </ClInclude>
-    <ClInclude Include="..\common\ff_hsa_helper.h">
-      <Filter>common</Filter>
-    </ClInclude>
     <ClInclude Include="..\common\ff_log.h">
       <Filter>common</Filter>
     </ClInclude>
     <ClInclude Include="..\common\ff_math.h">
-      <Filter>common</Filter>
-    </ClInclude>
-    <ClInclude Include="..\common\ff_ocl_helper.h">
-      <Filter>common</Filter>
-    </ClInclude>
-    <ClInclude Include="..\common\ff_runtime_hsa.h">
-      <Filter>common</Filter>
-    </ClInclude>
-    <ClInclude Include="..\common\ff_runtime_ocl.h">
       <Filter>common</Filter>
     </ClInclude>
     <ClInclude Include="..\common\ff_timer.h">
@@ -76,7 +58,7 @@
       <Filter>hsakmt</Filter>
     </ClInclude>
     <ClInclude Include="..\src\hsa_test.h">
-      <Filter>src</Filter>
+      <Filter>src\hsa</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
@@ -88,6 +70,12 @@
     </Filter>
     <Filter Include="hsakmt">
       <UniqueIdentifier>{02a424e1-26f8-4734-9ee3-454d38e2e27c}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="src\hsa">
+      <UniqueIdentifier>{a2964ce9-a0a0-42f5-bc45-6b29c620464f}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="src\kmt">
+      <UniqueIdentifier>{2b33dff7-2e82-4586-a59e-f7fc5c34d65b}</UniqueIdentifier>
     </Filter>
   </ItemGroup>
 </Project>
