--- a/proj/HsaTest.vcxproj.filters
+++ b/proj/HsaTest.vcxproj.filters
@@ -16,13 +16,19 @@
     <ClCompile Include="..\src\main.cpp">
       <Filter>src</Filter>
     </ClCompile>
-    <ClCompile Include="..\src\hsa_queue_test.cpp">
-      <Filter>src\hsa</Filter>
-    </ClCompile>
     <ClCompile Include="..\src\hsa_mem_test.cpp">
       <Filter>src\hsa</Filter>
     </ClCompile>
     <ClCompile Include="..\src\hsa_info_test.cpp">
+      <Filter>src\hsa</Filter>
+    </ClCompile>
+    <ClCompile Include="..\src\kmt_mem_test.cpp">
+      <Filter>src\kmt</Filter>
+    </ClCompile>
+    <ClCompile Include="..\src\kmt_test.cpp">
+      <Filter>src\kmt</Filter>
+    </ClCompile>
+    <ClCompile Include="..\src\hsa_test.cpp">
       <Filter>src\hsa</Filter>
     </ClCompile>
   </ItemGroup>
@@ -59,6 +65,9 @@
     </ClInclude>
     <ClInclude Include="..\src\hsa_test.h">
       <Filter>src\hsa</Filter>
+    </ClInclude>
+    <ClInclude Include="..\src\kmt_test.h">
+      <Filter>src\kmt</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
