--- a/KmtTest.vcxproj.filters
+++ b/KmtTest.vcxproj.filters
@@ -13,6 +13,12 @@
     <Filter Include="libelf\inc">
       <UniqueIdentifier>{72afa41b-fedf-42fb-96b4-d93f4670e300}</UniqueIdentifier>
     </Filter>
+    <Filter Include="kmttest">
+      <UniqueIdentifier>{4f63fbc9-c489-4cfb-881b-8cb9e6cfe297}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="hsakmt">
+      <UniqueIdentifier>{57130583-1c54-4982-97c0-108e234a31ea}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="libhsakmt\linux\kfd_ioctl.h">
@@ -48,6 +54,30 @@
     <ClInclude Include="libamdhsacode\hsa_ext_finalize.h">
       <Filter>libelf\inc</Filter>
     </ClInclude>
+    <ClInclude Include="libhsakmt\hsakmt.h">
+      <Filter>hsakmt</Filter>
+    </ClInclude>
+    <ClInclude Include="libhsakmt\hsakmttypes.h">
+      <Filter>hsakmt</Filter>
+    </ClInclude>
+    <ClInclude Include="kmttest\BasePacket.hpp">
+      <Filter>kmttest</Filter>
+    </ClInclude>
+    <ClInclude Include="kmttest\KFDTestUtil.hpp">
+      <Filter>kmttest</Filter>
+    </ClInclude>
+    <ClInclude Include="kmttest\BaseQueue.hpp">
+      <Filter>kmttest</Filter>
+    </ClInclude>
+    <ClInclude Include="kmttest\SDMAPacket.hpp">
+      <Filter>kmttest</Filter>
+    </ClInclude>
+    <ClInclude Include="kmttest\sdma_pkt_struct.h">
+      <Filter>kmttest</Filter>
+    </ClInclude>
+    <ClInclude Include="kmttest\SDMAQueue.hpp">
+      <Filter>kmttest</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="src\kmt_test.cpp">
@@ -79,6 +109,21 @@
     </ClCompile>
     <ClCompile Include="libamdhsacode\amd_hsa_code_util.cpp">
       <Filter>libelf</Filter>
+    </ClCompile>
+    <ClCompile Include="kmttest\BasePacket.cpp">
+      <Filter>kmttest</Filter>
+    </ClCompile>
+    <ClCompile Include="kmttest\KFDTestUtil.cpp">
+      <Filter>kmttest</Filter>
+    </ClCompile>
+    <ClCompile Include="kmttest\BaseQueue.cpp">
+      <Filter>kmttest</Filter>
+    </ClCompile>
+    <ClCompile Include="kmttest\SDMAPacket.cpp">
+      <Filter>kmttest</Filter>
+    </ClCompile>
+    <ClCompile Include="kmttest\SDMAQueue.cpp">
+      <Filter>kmttest</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
