--- a/KmtTest.vcxproj.filters
+++ b/KmtTest.vcxproj.filters
@@ -152,5 +152,8 @@
     <ClCompile Include="src\kmthsa.cpp">
       <Filter>src</Filter>
     </ClCompile>
+    <ClCompile Include="src\aql.cpp">
+      <Filter>src</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
